plugins {
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
}

version = '1.0.0'
group = 'com.deaddiesel'

base {
    archivesName = "guide"
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

minecraft {
    mappings channel: 'official', version: '1.20.1'
    copyIdeResources = true

    ext.inferModulePath = false

    runs {
        client {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'

            args '--ignoreModulePath'

            jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
                    '--add-opens', 'java.base/java.util=ALL-UNNAMED'

            mods {
                main {
                    source sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file('run-server')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            args '--nogui'

            jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'

            mods {
                main {
                    source sourceSets.main
                }
            }
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    maven {
        name = "Modrinth"
        url = "https://modrinth.com"
    }
    maven {
        name = "Sponge"
        url = "https://spongepowered.org"
    }
    mavenCentral()
    maven {
        name = "Jared's maven"
        url = "https://blamejared.com"
    }
    maven {
        name = "Forge maven"
        url = "https://minecraftforge.net"
    }
}

dependencies {
    minecraft "net.minecraftforge:forge:1.20.1-47.4.20"

    implementation 'com.vladsch.flexmark:flexmark:0.64.8'
    implementation 'com.vladsch.flexmark:flexmark-util-data:0.64.8'

    compileOnly fg.deobf("mezz.jei:jei-1.20.1-forge-api:15.20.0.130")
    runtimeOnly fg.deobf("mezz.jei:jei-1.20.1-forge:15.20.0.130")
}

compileJava {
    options.encoding = 'UTF-8'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}